--- a/nursetask-server/src/main/resources/application.yml
+++ b/nursetask-server/src/main/resources/application.yml
@@ -1,8 +1,23 @@
 server:
   port: 7011
-#eureka:
-#  instance:
-#    hostname: localhost
-#  client:
-#    register-with-eureka: false
-#    fetch-registry:false
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    url: jdbc:oracle:thin:@168.130.7.81:1521:sdtd
+    username: sdtd27
+    password: sdtd27
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    initialSize: 5
+    minIdle: 5
+    maxActive : 10
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 30000
+    minEvictableIdleTimeMillis: 60000
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxPoolPreparedStatementPerConnectionSize: 20
+    filters: stat,wall,log4j
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
