--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 		<module>config-repo</module>
 		<module>eureka-server</module>
 		<module>xstask-server</module>-->
-		<!--<module>file-server</module>
-		<module>exam-server</module>-->
+		<module>file-server</module>
+		<module>exam-server</module>
 	</modules>
 
 	<parent>
@@ -133,7 +133,11 @@
 			<artifactId>xmlbeans</artifactId>
 			<version>2.6.0</version>
 		</dependency>
-
+		<!-- 支持 @ConfigurationProperties 注解 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+		</dependency>
 
 	</dependencies>
 
