--- a/nursetask-server/src/main/resources/application.yml
+++ b/nursetask-server/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
     maxPoolPreparedStatementPerConnectionSize: 20
     filters: stat,wall,log4j
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+  jpa:
+     show-sql: true
+
 #spring:
 #  datasource:
 #    type: com.alibaba.druid.pool.DruidDataSource
