--- a/census-server/src/main/resources/application.yml
+++ b/census-server/src/main/resources/application.yml
@@ -21,3 +21,17 @@ spring:
     maxPoolPreparedStatementPerConnectionSize: 20
     filters: stat,wall,log4j
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+#开启shutdown的安全验证
+management:
+  security:
+    enabled: false
+    roles: USER
+#  port: 8060
+#  address: 127.0.0.1
+  health:
+    mail:
+      enabled: false
+#允许关闭请求
+endpoints:
+  shutdown:
+    enabled: false
