--- a/nursetask-server/src/main/resources/application.yml
+++ b/nursetask-server/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:oracle:thin:@168.130.7.81:1521:sdtd
+    url: jdbc:oracle:thin:@47.92.67.90:1521:orcl
     username: sdtd27
     password: sdtd27
     driver-class-name: oracle.jdbc.driver.OracleDriver
