--- a/xstask-server/pom.xml
+++ b/xstask-server/pom.xml
@@ -7,7 +7,19 @@
     <artifactId>xstask-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-
+    <repositories>
+        <repository>
+            <id>nexus</id>
+            <name>nexus</name>
+            <url>http://168.130.7.10:8081/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
     <name>xstask-server</name>
     <description>输电通道二期巡视任务微服务</description>
 
@@ -78,7 +90,7 @@
         <dependency>
             <groupId>com.rzt.base</groupId>
             <artifactId>Rzt-base</artifactId>
-            <version>1.1.5-SNAPSHOT</version>
+            <version>1.1.6-SNAPSHOT</version>
         </dependency>
 
         <!--线程安全的时间插件jar包-->
