--- a/linedata-server/src/main/resources/application.yml
+++ b/linedata-server/src/main/resources/application.yml
@@ -19,7 +19,10 @@ spring:
 #      driverClassName: com.mysql.jdbc.Driver
 #      type: com.alibaba.druid.pool.DruidDataSource
       #oracle数据库配置
-      driverClassName: oracle.jdbc.driver.OracleDriver
+#      driverClassName: oracle.jdbc.driver.OracleDriver
+#      url: jdbc:oracle:thin:@localhost:1521/orcl
+#      username: sdtd
+#      password: sdtd
       url: jdbc:oracle:thin:@47.92.67.90:1521/orcl
       username: sdtd27
       password: sdtd27
@@ -58,8 +61,11 @@ spring:
 #文件上传路径,必须以/结尾
 my-defined:
    mapProps:
-    file-dir: F:/sdtd/
-    pic-dir: F:/sdtd/test/
+    upload-dir: F:/sdtd/test/
     thum-height: 50
     thum-width: 50
-
+file:
+  upload-dir: F:/sdtd/test/
+  thum:
+    height: 50
+    width: 50
