--- a/linedata-server/src/main/resources/application.yml
+++ b/linedata-server/src/main/resources/application.yml
@@ -10,7 +10,7 @@ logging:
 
 spring:
   application:
-    name: microservice-rzt-exam
+    name: sdtd27-linedata
   primary:
     datasource:
 #      url: jdbc:mysql://localhost:3306/micro_service_exam?useUnicode=true&characterEncoding=utf-8
@@ -48,7 +48,7 @@ spring:
       filters: stat,log4j
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show: true
   #文件上传
   http:
@@ -59,13 +59,13 @@ spring:
       max-request-size: 50Mb
 
 #文件上传路径,必须以/结尾
-my-defined:
-   mapProps:
-    upload-dir: F:/sdtd/test/
-    thum-height: 50
-    thum-width: 50
-file:
-  upload-dir: F:/sdtd/test/
-  thum:
-    height: 50
-    width: 50
+#my-defined:
+#   mapProps:
+#    upload-dir: F:/sdtd/test/
+#    thum-height: 50
+#    thum-width: 50
+#file:
+#  upload-dir: F:/sdtd/test/
+#  thum:
+#    height: 50
+#    width: 50
