--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,9 @@
         <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
         <!-- oracle数据库驱动 -->
         <dependency>
-            <groupId>ojdbc</groupId>
-            <artifactId>ojdbc</artifactId>
-            <version>ojdbc14-10.2.0.2</version>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.1.0.7.0</version>
         </dependency>
         <dependency>
             <groupId>com.rzt.base</groupId>
