--- a/userCenter/src/main/resources/application-prd.yml
+++ b/userCenter/src/main/resources/application-prd.yml
@@ -4,8 +4,8 @@ server:
 spring:
     datasource:
       type: com.alibaba.druid.pool.DruidDataSource
-#      url: jdbc:oracle:thin:@47.92.67.90:1521:ORCL
-      url: jdbc:oracle:thin:@192.168.1.111:1521:LIUZE
+      url: jdbc:oracle:thin:@47.92.67.90:1521:ORCL
+#      url: jdbc:oracle:thin:@192.168.1.111:1521:LIUZE
       username: sdtd27
       password: sdtd27
       driver-class-name: oracle.jdbc.OracleDriver
