--- a/userCenter/src/main/resources/application-prd.yml
+++ b/userCenter/src/main/resources/application-prd.yml
@@ -25,7 +25,7 @@ spring:
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMill
     jpa:
       hibernate:
-        ddl-auto: update
+        ddl-auto: none
       show-sql: true
 
 logging:
