--- a/userCenter/pom.xml
+++ b/userCenter/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>userCenter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>Microservice-Rzt-userCenter</name>
+	<name>userCenter</name>
 	<description>用户中心</description>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -50,6 +50,10 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.oracle</groupId>
