--- a/nursetask-server/src/main/resources/application.yml
+++ b/nursetask-server/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:7002/eureka/
+      defaultZone: http://168.130.1.31:31814/eureka/
 #spring:
 #  profiles:
 #    active: prd
