--- a/linedata-server/pom.xml
+++ b/linedata-server/pom.xml
@@ -18,6 +18,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<start-class>com.rzt.LinedataServerApplication</start-class>
 	</properties>
 
 	<dependencies>
@@ -26,7 +27,8 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.18</version>
 		</dependency>
-	</dependencies>
+
+    </dependencies>
 
 	<build>
 		<plugins>
