--- a/nursetask-server/src/main/resources/application.yml
+++ b/nursetask-server/src/main/resources/application.yml
@@ -3,10 +3,11 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:oracle:thin:@47.92.67.90:1521:orcl
+    url: jdbc:mysql://168.130.1.31:30624/sdtd27?useUnicode=true&characterEncoding=utf8
     username: sdtd27
     password: sdtd27
-    driver-class-name: oracle.jdbc.driver.OracleDriver
+    driver-class-name: com.mysql.jdbc.Driver
+#    driver-class-name: oracle.jdbc.driver.OracleDriver
     initialSize: 5
     minIdle: 5
     maxActive : 10
@@ -23,6 +24,7 @@ spring:
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
   jpa:
      show-sql: true
+     database: ORACLE
   application:
     name: nurseTask
 eureka:
