--- a/zull/src/main/resources/application.yml
+++ b/zull/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:7002/eureka/
+      defaultZone: http://192.168.1.111:7002/eureka/
 zuul:
   routes:
     userCenter:
