--- a/xstask-server/src/main/resources/application-dev.yml
+++ b/xstask-server/src/main/resources/application-dev.yml
@@ -2,52 +2,58 @@ server:
     port: 12345
     context-path: /xsTask
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:7002/eureka/
 
 spring:
-    datasource:
-      type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:mysql://168.130.1.31:30624/sdtd27?useUnicode=true&characterEncoding=utf8
-      username: sdtd27
+  application:
+            name: xsTask
+  logging:
+    config: classpath:logback-spring.xml
+  #url加密  用于swagger模块
+  security:
+    basic:
+      path: /xsTask/swagger-ui.html
+      enabled: true
+    user:
+      name: sdtd27
       password: sdtd27
-      driver-class-name: oracle.jdbc.driver.OracleDriver
-      minIdle: 10
-      maxActive: 200
-      initialSize: 5
-      maxWait: 60000
-      timeBetweenEvictionRunsMillis: 3000
-      minEvictableIdleTimeMillis: 300000
-      validationQuery: SELECT 1 FROM DUAL
-      testWhileIdle: true
-      testOnBorrow: false
-      testOnReturn: false
-      poolPreparedStatements: true
-      maxPoolPreparedStatementPerConnectionSize: 20
-      filters: stat,wall,log4j
-      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMill
-    redis:
-          database: 0
-          host: 168.130.1.31
-          password: 'sdtd275d'
-          pool:
-              max-active: 200
-              max-idle: 8
-              max-wait: -1
-              min-idle: 2
-          port: 30809
-          timeout: 0
 
-
-logging:
-  config: classpath:logback-spring.xml
-#url加密  用于swagger模块
-security:
-  basic:
-    path: /xsTask/swagger-ui.html
-    enabled: true
-  user:
-    name: sdtd27
-    password: sdtd27
-
+  datasource:
+        type: com.alibaba.druid.pool.DruidDataSource
+        url: jdbc:mysql://168.130.1.31:30624/sdtd27?useUnicode=true&characterEncoding=utf8
+        username: sdtd27
+        password: sdtd27
+        driver-class-name: com.mysql.jdbc.Driver
+        minIdle: 10
+        maxActive: 200
+        initialSize: 5
+        maxWait: 60000
+        timeBetweenEvictionRunsMillis: 3000
+        minEvictableIdleTimeMillis: 300000
+        validationQuery: SELECT 1 FROM DUAL
+        testWhileIdle: true
+        testOnBorrow: false
+        testOnReturn: false
+        poolPreparedStatements: true
+        maxPoolPreparedStatementPerConnectionSize: 20
+        filters: stat,wall,log4j
+        connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMill
+  jpa:
+    database: ORACLE
+  redis:
+    database: 0
+    host: 168.130.1.31
+    password: 'sdtd275d'
+    pool:
+        max-active: 200
+        max-idle: 8
+        max-wait: -1
+        min-idle: 2
+    port: 30809
+    timeout: 0
 
 #解决时差的问题
 #      mysql:
