--- a/nursetask-server/pom.xml
+++ b/nursetask-server/pom.xml
@@ -23,7 +23,7 @@
 
 	</dependencies>
 
-	<build>
+<!--	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -33,7 +33,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
+	</build>-->
 
 
 </project>
