--- a/zull/src/main/resources/application.yml
+++ b/zull/src/main/resources/application.yml
@@ -11,21 +11,24 @@ zuul:
   routes:
     userCenter:
       path: /userCenter/**
-      serviceId: userCenter
+      serviceId: http://168.130.1.31:32332
       stripPrefix: false
     xsTask:
       path: /xsTask/**
-      serviceId: xsTask
+      serviceId: http://168.130.1.31:32165
       stripPrefix: false
     nurseTask:
       path: /nurseTask/**
-      serviceId: nurseTask
+      serviceId: http://168.130.1.31:32021
       stripPrefix: false
     linedata:
       path: /linedata/**
-      serviceId: linedata
+      serviceId: http://168.130.1.31:32727
       stripPrefix: false
     fileServer:
       path: /fileserver/**
-      url: fileserver
+      url: http://168.130.1.31:31235
       stripPrefix: false
+    imgUrl:
+      path: /img/**
+      url: http://168.130.1.31:31141
