--- a/linedata-server/pom.xml
+++ b/linedata-server/pom.xml
@@ -28,7 +28,14 @@
 			<version>1.16.18</version>
 		</dependency>
 
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
+		<dependency>
+			<groupId>com.belerweb</groupId>
+			<artifactId>pinyin4j</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
