修改配置文件数据库

--- a/linedata-server/src/main/resources/application.yml
+++ b/linedata-server/src/main/resources/application.yml
@@ -24,9 +24,9 @@ spring:
 #      url: jdbc:oracle:thin:@localhost:1521/orcl
 #      username: sdtd
 #      password: sdtd
-      url: jdbc:oracle:thin:@168.130.1.32:1521/orcl
-      username: sdtd27
-      password: sdtd27
+      url: jdbc:oracle:thin:@47.94.131.120:1521/sdt
+      username: sdtd
+      password: sdtd
 # 下面为连接池的补充设置，应用到上面所有数据源中
 # 初始化大小，最小，最大
       initialSize: 5
@@ -73,4 +73,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://168.130.1.31:31814/eureka/
+      defaultZone: http://localhost:7002/eureka/
