--- a/userCenter/src/main/resources/application-prd.yml
+++ b/userCenter/src/main/resources/application-prd.yml
@@ -6,10 +6,10 @@ token:
 spring:
     datasource:
       type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:oracle:thin:@168.130.1.32:1521:ORCL
+      url: jdbc:oracle:thin:@47.94.131.120:1521:sdt
 #      url: jdbc:oracle:thin:@192.168.1.111:1521:LIUZE
-      username: sdtd27
-      password: sdtd27
+      username: sdtd
+      password: sdtd
       driver-class-name: oracle.jdbc.OracleDriver
       minIdle: 10
       maxActive: 200
@@ -33,9 +33,9 @@ spring:
       name: userCenter
     redis:
         database: 0
-        host: 168.130.1.31
-        port: 31662
-        password:
+        host: 39.106.206.129
+        port: 6379
+        password: Rzt82890758-Rzt82890758
         timeout: 0
         pool:
           max-active: 100
