--- a/xstask-server/pom.xml
+++ b/xstask-server/pom.xml
@@ -49,6 +49,11 @@
     <plugins>
 
         <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+
+        <!--<plugin>
             <artifactId>maven-jar-plugin</artifactId>
             <configuration>
                 <archive>
@@ -81,7 +86,7 @@
                     </configuration>
                 </execution>
             </executions>
-        </plugin>
+        </plugin>-->
     </plugins>
 </build>
 
