--- a/file-server/src/main/resources/application.yml
+++ b/file-server/src/main/resources/application.yml
@@ -63,10 +63,14 @@ spring:
 #文件上传路径,必须以/结尾
 my-defined:
    mapProps:
+   #docker
 #    file-dir: /usr/share/nginx/html/
 #    pic-dir: /usr/share/nginx/html/
-    file-dir: F:/testFile/
-    pic-dir: F:/testFile/
+#ali
+    file-dir: /usr/local/nginx-fileserver/html/
+    pic-dir: /usr/local/nginx-fileserver/html/
+#    file-dir: F:/testFile/
+#    pic-dir: F:/testFile/
     thum-height: 50
     thum-width: 50
 
