app列表不展示伪删除的任务

--- a/xstask-server/pom.xml
+++ b/xstask-server/pom.xml
@@ -58,8 +58,7 @@
                         </manifest>
                     </archive>
                     <excludes>
-                        <exclude>*.yml</exclude>
-                        <exclude>*.xml</exclude>
+                        <exclude>*.properties</exclude>
                     </excludes>
                 </configuration>
             </plugin>
